apps/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: base
  labels:
    istio.io/dataplane-mode: ambient
    name: base
