apps/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4321"
    spec:
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: frontend
          image: ghcr.io/traipoap/frontend:0.0.25
          ports:
            - name: http
              containerPort: 4321
              protocol: TCP
          resources: {}
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            allowPrivilegeEscalation: false
            #readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
