apps/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 4321
      targetPort: 4321
      protocol: TCP
      name: http
  selector:
    app: frontend
