apps/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-gateway
  annotations:
    cert-manager.io/cluster-issuer: "cluster-ca"
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "app.codezap.win"
    allowedRoutes:
      namespaces:
        from: "All"

  - name: https
    protocol: HTTPS
    port: 443
    hostname: "app.codezap.win"
    tls:
      mode: Terminate
      certificateRefs:
      - name: frontend-tls
        kind: Secret
    allowedRoutes:
      namespaces:
        from: All
